learn-terraform-provision-eks-cluster/host-ingress.yaml
apiVersion: extensions/v1beta1 
kind: Ingress
metadata:
  name: host-ingress 
spec:
  rules:
    - host: bandicoot.example.com
      http: 
        paths:
        - backend: 
            serviceName: bandicoot 
            servicePort: 8080
