learn-terraform-provision-eks-cluster/path-ingress.yaml
apiVersion: extensions/v1beta1 
kind: Ingress
metadata:
  name: path-ingress 
spec:
  rules:
  - host: bandicoot.example.com
    http: 
      paths:
      - path: "/" 
        backend:
          serviceName: bandicoot
          servicePort: 8080 
      - path: "/a/"
        backend: 
          serviceName: alpaca 
          servicePort: 8080
