learn-terraform-provision-eks-cluster/simple-ingress.yaml
apiVersion: extensions/v1beta1 
kind: Ingress
metadata:
  name: simple-ingress 
spec:
  backend: 
    serviceName: alpaca 
    servicePort: 8080
