learn-terraform-provision-eks-cluster/example-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: kuar-validator
webhooks:
- name: validator.kuar.com
  rules:
  - apiGroups:
    - "beta.kuar.com"
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - loadtests
  clientConfig:
    # Substitute the appropriate IP address for your webhook
    url: https://3F42BD5F6372CFB12028BA6D9F31E8CA.sk1.us-east-2.eks.amazonaws.com:8080
    # This should be the base64-encoded CA certificate for your cluster,
    # you can find it in your ${KUBECONFIG} file
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUM1ekNDQWMrZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwcmRXSmwKY201bGRHVnpNQjRYRFRJek1ERXlPREE1TkRVeE5Gb1hEVE16TURFeU5UQTVORFV4TkZvd0ZURVRNQkVHQTFVRQpBeE1LYTNWaVpYSnVaWFJsY3pDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTU9CCnI2UHlwbzgvZEUyU0ordGVJZ2FMU0hJREl4UHNMSVQ2bDBhYkNHR2VpQXlYeWlPcjhYSjg2cXpvNkF5Znh2enMKZG5wZGRZQ2tjVDZLcE91Z2U0UXduMjdQZFh0cHVKL3NWZzVKbHl6cll4VGlZd25lbnVENDNrVUhWVjZqVm5wRQpHVkI0c0Q0UmpNVj [...]
